# src/dsmf/server/dsmf_server/models/__init__.py
@@ -4,8 +4,9 @@
 from dsmf_server.models.connection_configuration import ConnectionConfiguration
 from dsmf_server.models.controller_configuration import ControllerConfiguration
 from dsmf_server.models.device_configuration import DeviceConfiguration
+from dsmf_server.models.domain_configuration import DomainConfiguration
 from dsmf_server.models.endpoint import Endpoint
 from dsmf_server.models.network_border_configuration import NetworkBorderConfiguration
-from dsmf_server.models.service_configuration import ServiceConfiguration
+from dsmf_server.models.network_configuration import NetworkConfiguration
 from dsmf_server.models.slice import Slice
 from dsmf_server.models.tunnel import Tunnel
