# src/dsmf/server/dsmf_server/models/domain_configuration.py
@@ -1,32 +1,35 @@
 # coding: utf-8
 
-from datetime import date, datetime
+from typing import List
 
-from typing import List, Dict, Type
-
+from dsmf_server import util
 from dsmf_server.models.base_model_ import Model
 from dsmf_server.models.controller_configuration import ControllerConfiguration
 from dsmf_server.models.device_configuration import DeviceConfiguration
 from dsmf_server.models.network_border_configuration import NetworkBorderConfiguration
-from dsmf_server import util
+from dsmf_server.models.network_configuration import NetworkConfiguration
 
 
-class ServiceConfiguration(Model):
+class DomainConfiguration(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
     """
 
-    def __init__(self, type: str=None, network: str=None, controllers: List[ControllerConfiguration]=None, vpn_gateways: List[DeviceConfiguration]=None, switches: List[DeviceConfiguration]=None, network_borders: List[NetworkBorderConfiguration]=None, reservable_bitrate: int=1000000000):
-        """ServiceConfiguration - a model defined in OpenAPI
+    def __init__(self, type: str = None, network: str = None, controllers: List[ControllerConfiguration] = None,
+                 vpn_gateways: List[DeviceConfiguration] = None, switches: List[DeviceConfiguration] = None,
+                 network_borders: List[NetworkBorderConfiguration] = None, networks: List[NetworkConfiguration] = None,
+                 reservable_bitrate: int = 1000000000):
+        """DomainConfiguration - a model defined in OpenAPI
 
-        :param type: The type of this ServiceConfiguration.
-        :param network: The network of this ServiceConfiguration.
-        :param controllers: The controllers of this ServiceConfiguration.
-        :param vpn_gateways: The vpn_gateways of this ServiceConfiguration.
-        :param switches: The switches of this ServiceConfiguration.
-        :param network_borders: The network_borders of this ServiceConfiguration.
-        :param reservable_bitrate: The reservable_bitrate of this ServiceConfiguration.
+        :param type: The type of this DomainConfiguration.
+        :param network: The network of this DomainConfiguration.
+        :param controllers: The controllers of this DomainConfiguration.
+        :param vpn_gateways: The vpn_gateways of this DomainConfiguration.
+        :param switches: The switches of this DomainConfiguration.
+        :param network_borders: The network_borders of this DomainConfiguration.
+        :param networks: The networks of this DomainConfiguration.
+        :param reservable_bitrate: The reservable_bitrate of this DomainConfiguration.
         """
         self.openapi_types = {
             'type': str,
@@ -35,6 +38,7 @@ class ServiceConfiguration(Model):
             'vpn_gateways': List[DeviceConfiguration],
             'switches': List[DeviceConfiguration],
             'network_borders': List[NetworkBorderConfiguration],
+            'networks': List[NetworkConfiguration],
             'reservable_bitrate': int
         }
 
@@ -45,6 +49,7 @@ class ServiceConfiguration(Model):
             'vpn_gateways': 'vpn_gateways',
             'switches': 'switches',
             'network_borders': 'network_borders',
+            'networks': 'networks',
             'reservable_bitrate': 'reservable_bitrate'
         }
 
@@ -54,35 +59,36 @@ class ServiceConfiguration(Model):
         self._vpn_gateways = vpn_gateways
         self._switches = switches
         self._network_borders = network_borders
+        self._networks = networks
         self._reservable_bitrate = reservable_bitrate
 
     @classmethod
-    def from_dict(cls, dikt: dict) -> 'ServiceConfiguration':
+    def from_dict(cls, dikt: dict) -> 'DomainConfiguration':
         """Returns the dict as a model
 
         :param dikt: A dict.
-        :return: The service_configuration of this ServiceConfiguration.
+        :return: The domain_configuration of this DomainConfiguration.
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def type(self):
-        """Gets the type of this ServiceConfiguration.
+        """Gets the type of this DomainConfiguration.
 
         The service type to be used
 
-        :return: The type of this ServiceConfiguration.
+        :return: The type of this DomainConfiguration.
         :rtype: str
         """
         return self._type
 
     @type.setter
     def type(self, type):
-        """Sets the type of this ServiceConfiguration.
+        """Sets the type of this DomainConfiguration.
 
         The service type to be used
 
-        :param type: The type of this ServiceConfiguration.
+        :param type: The type of this DomainConfiguration.
         :type type: str
         """
         allowed_values = ["DSMF", "DTMF"]  # noqa: E501
@@ -96,22 +102,22 @@ class ServiceConfiguration(Model):
 
     @property
     def network(self):
-        """Gets the network of this ServiceConfiguration.
+        """Gets the network of this DomainConfiguration.
 
         Our network name
 
-        :return: The network of this ServiceConfiguration.
+        :return: The network of this DomainConfiguration.
         :rtype: str
         """
         return self._network
 
     @network.setter
     def network(self, network):
-        """Sets the network of this ServiceConfiguration.
+        """Sets the network of this DomainConfiguration.
 
         Our network name
 
-        :param network: The network of this ServiceConfiguration.
+        :param network: The network of this DomainConfiguration.
         :type network: str
         """
 
@@ -119,22 +125,22 @@ class ServiceConfiguration(Model):
 
     @property
     def controllers(self):
-        """Gets the controllers of this ServiceConfiguration.
+        """Gets the controllers of this DomainConfiguration.
 
         Specifies the controllers available to us
 
-        :return: The controllers of this ServiceConfiguration.
+        :return: The controllers of this DomainConfiguration.
         :rtype: List[ControllerConfiguration]
         """
         return self._controllers
 
     @controllers.setter
     def controllers(self, controllers):
-        """Sets the controllers of this ServiceConfiguration.
+        """Sets the controllers of this DomainConfiguration.
 
         Specifies the controllers available to us
 
-        :param controllers: The controllers of this ServiceConfiguration.
+        :param controllers: The controllers of this DomainConfiguration.
         :type controllers: List[ControllerConfiguration]
         """
 
@@ -142,22 +148,22 @@ class ServiceConfiguration(Model):
 
     @property
     def vpn_gateways(self):
-        """Gets the vpn_gateways of this ServiceConfiguration.
+        """Gets the vpn_gateways of this DomainConfiguration.
 
         The vpn gateways known to us
 
-        :return: The vpn_gateways of this ServiceConfiguration.
+        :return: The vpn_gateways of this DomainConfiguration.
         :rtype: List[DeviceConfiguration]
         """
         return self._vpn_gateways
 
     @vpn_gateways.setter
     def vpn_gateways(self, vpn_gateways):
-        """Sets the vpn_gateways of this ServiceConfiguration.
+        """Sets the vpn_gateways of this DomainConfiguration.
 
         The vpn gateways known to us
 
-        :param vpn_gateways: The vpn_gateways of this ServiceConfiguration.
+        :param vpn_gateways: The vpn_gateways of this DomainConfiguration.
         :type vpn_gateways: List[DeviceConfiguration]
         """
 
@@ -165,22 +171,22 @@ class ServiceConfiguration(Model):
 
     @property
     def switches(self):
-        """Gets the switches of this ServiceConfiguration.
+        """Gets the switches of this DomainConfiguration.
 
         The switches known to us
 
-        :return: The switches of this ServiceConfiguration.
+        :return: The switches of this DomainConfiguration.
         :rtype: List[DeviceConfiguration]
         """
         return self._switches
 
     @switches.setter
     def switches(self, switches):
-        """Sets the switches of this ServiceConfiguration.
+        """Sets the switches of this DomainConfiguration.
 
         The switches known to us
 
-        :param switches: The switches of this ServiceConfiguration.
+        :param switches: The switches of this DomainConfiguration.
         :type switches: List[DeviceConfiguration]
         """
 
@@ -188,45 +194,68 @@ class ServiceConfiguration(Model):
 
     @property
     def network_borders(self):
-        """Gets the network_borders of this ServiceConfiguration.
+        """Gets the network_borders of this DomainConfiguration.
 
         The routes to other networks known to us
 
-        :return: The network_borders of this ServiceConfiguration.
+        :return: The network_borders of this DomainConfiguration.
         :rtype: List[NetworkBorderConfiguration]
         """
         return self._network_borders
 
     @network_borders.setter
     def network_borders(self, network_borders):
-        """Sets the network_borders of this ServiceConfiguration.
+        """Sets the network_borders of this DomainConfiguration.
 
         The routes to other networks known to us
 
-        :param network_borders: The network_borders of this ServiceConfiguration.
+        :param network_borders: The network_borders of this DomainConfiguration.
         :type network_borders: List[NetworkBorderConfiguration]
         """
 
         self._network_borders = network_borders
 
     @property
+    def networks(self):
+        """Gets the networks of this DomainConfiguration.
+
+        The other networks known to us
+
+        :return: The networks of this DomainConfiguration.
+        :rtype: List[NetworkConfiguration]
+        """
+        return self._networks
+
+    @networks.setter
+    def networks(self, networks):
+        """Sets the networks of this DomainConfiguration.
+
+        The other networks known to us
+
+        :param networks: The networks of this DomainConfiguration.
+        :type networks: List[NetworkConfiguration]
+        """
+
+        self._networks = networks
+
+    @property
     def reservable_bitrate(self):
-        """Gets the reservable_bitrate of this ServiceConfiguration.
+        """Gets the reservable_bitrate of this DomainConfiguration.
 
         The bitrate that can be reserved by hosts on our network
 
-        :return: The reservable_bitrate of this ServiceConfiguration.
+        :return: The reservable_bitrate of this DomainConfiguration.
         :rtype: int
         """
         return self._reservable_bitrate
 
     @reservable_bitrate.setter
     def reservable_bitrate(self, reservable_bitrate):
-        """Sets the reservable_bitrate of this ServiceConfiguration.
+        """Sets the reservable_bitrate of this DomainConfiguration.
 
         The bitrate that can be reserved by hosts on our network
 
-        :param reservable_bitrate: The reservable_bitrate of this ServiceConfiguration.
+        :param reservable_bitrate: The reservable_bitrate of this DomainConfiguration.
         :type reservable_bitrate: int
         """
 
